--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -6,8 +6,11 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: read
-      deployments: write
-      statuses: write
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -15,18 +18,29 @@ jobs:
           distribution: temurin
           java-version: 17
           cache: gradle
-          
+
       - name: clean
         run: ./gradlew clean
 
       - name: assemble
         run: ./gradlew wasmJsBrowserDistribution
-      - name: Vercel Actions
-        uses: nexterias/actions-vercel@v1.2.1
+      #      - name: Vercel Actions
+      #        uses: nexterias/actions-vercel@v1.2.1
+      #        with:
+      #          token: ${{ secrets.VERCEL_TOKEN }}
+      #          project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+      #          org-id: ${{ secrets.VERCEL_ORG_ID }}
+      #          prebuilt: true
+      #          cwd: composeApp/build/dist/wasmJs/productionExecutable/
+#      - name: Archive production artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wasm-artifact
+#          path: |
+#            composeApp/build/dist/wasmJs/productionExecutable/
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v3
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          token: ${{ secrets.VERCEL_TOKEN }}
-          project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          org-id: ${{ secrets.VERCEL_ORG_ID }}
-          prebuilt: true
-          cwd: composeApp/build/dist/wasmJs/productionExecutable/
-          
+          path: composeApp/build/dist/wasmJs/productionExecutable/
