--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ compose-plugin = "1.6.10"
 compose-navigation = "2.8.0-alpha01"
 junit = "4.13.2"
 kotlin = "2.0.0"
+kotlinxDatetime = "0.6.0"
 kotlinxSerializationJson = "1.7.0"
 
 [libraries]
@@ -32,6 +33,7 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 #compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 #compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 [plugins]
